--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -19,14 +19,14 @@ jobs:
 
       - name: Build an image from Dockerfile
         env:
-          ORGANIZATION: ${{ secret.DOCKERHUB_USERNAME }}
+          ORGANIZATION: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
           docker build -t docker.io/$ORGANIZATION/github-runner:${{ github.sha }} .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         env:
-          ORGANIZATION: ${{ secret.DOCKERHUB_USERNAME }}
+          ORGANIZATION: ${{ secrets.DOCKERHUB_USERNAME }}
         with:
           image-ref: 'docker.io/$ORGANIZATION/github-runner:${{ github.sha }}'
           format: 'template'
