--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -21,14 +21,14 @@ jobs:
         env:
           ORGANIZATION: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          docker build -t docker.io/$ORGANIZATION/github-runner:${{ github.sha }} .
+          docker build -t "docker.io/$ORGANIZATION/github-runner:${{ github.sha }}" .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         env:
           ORGANIZATION: ${{ secrets.DOCKERHUB_USERNAME }}
         with:
-          image-ref: 'docker.io/$ORGANIZATION/github-runner:${{ github.sha }}'
+          image-ref: "docker.io/$ORGANIZATION/github-runner:${{ github.sha }}"
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
