--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -14,24 +14,17 @@ jobs:
     name: Build
     runs-on: "ubuntu-18.04"
     steps:
-      - name: Docker Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Build an image from Dockerfile
-        env:
-          ORGANIZATION: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
-          docker build -t "docker.io/$ORGANIZATION/github-runner:${{ github.sha }}" .
+          docker build -t "docker.io/jkurihara/github-runner:${{ github.sha }}" .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'docker.io/${{ secrets.ORGANIZATION }}/github-runner:${{ github.sha }}'
+          image-ref: 'docker.io/jkurihara/github-runner:${{ github.sha }}'
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
